--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ local.properties
 .loadpath
 .recommenders
 BonzAI2016/*
-BonzAI2017/BonzAI2017/*
+BonzAI2017/BonzAI2017/*.jar
 
 # Mac .DS_STORE
 .DS_STORE
