--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ BonzAI2017/BonzAI2017/*
 bonzai-2016
 #we will eventually have some AI's, we may need to change this
 *.jar
+scenarios/Thumbs.db
 
 # Mac .DS_STORE
 .DS_STORE
