--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,8 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-BonzAI2016/*
-BonzAI2017/BonzAI2017/*.jar
-BonzAI2017/BonzAI2017/*
-bonzai-2016
+bonzai2017/
 #we will eventually have some AI's, we may need to change this
-*.jar
 scenarios/Thumbs.db
 
 # Mac .DS_STORE
