I finsihed my AI and made it work (hopefully) with josh's changes

--- a/BonzAI2017/build.xml
+++ b/BonzAI2017/build.xml
@@ -97,7 +97,7 @@
 		<compile source = "ais/SimpleAI/" files = "**">
 			<external><classpath refid = "castles.classpath"/></external>
 		</compile>
-		<build-ai jar = "ais/SimpleAI.jar" source = "./ais/SimpleAI/" main = "" />
+		<build jar = "ais/SimpleAI.jar" source = "./ais/SimpleAI/" main = "" />
 	</target>
 	
 	<!-- Run Target(s) -->
