--- a/BonzAI2017/build.xml
+++ b/BonzAI2017/build.xml
@@ -86,19 +86,11 @@
 		</build>
 	</target>
 	
-	<target name = "deploy" depends = "build, ai.simple">
+	<target name = "deploy" depends = "build">
 		<copy todir = "bonzai2017/scenarios/"><fileset dir="scenarios/" /></copy>
 		<copy todir = "bonzai2017/art/"><fileset dir = "${art}/" /></copy>
 	</target>
 	
-	<!-- AI Target(s) -->
-	<target name = "ai.simple">
-		<mkdir dir = "ais/SimpleAI/${bin}" />
-		<compile source = "ais/SimpleAI/" files = "**">
-			<external><classpath refid = "castles.classpath"/></external>
-		</compile>
-		<build-ai jar = "ais/SimpleAI.jar" source = "./ais/SimpleAI/" main = "" />
-	</target>
 	<!-- Run Target(s) -->
 	<target name="run">
 		<java jar = "${package}/castles.jar" fork = "true" dir = "${package}" />
