Made a seeding program to give a rough estimate of the order of best to worst teams

--- a/BonzAI2017/build.xml
+++ b/BonzAI2017/build.xml
@@ -69,7 +69,15 @@
 		<build jar = "castles.jar" source = "./" main = "bonzai.automator.Automator">
 		</build>
 	</target>
-
+	
+	<!-- Build Bracket Generator -->
+	<target name = "bracket" depends = "build">
+			<build jar = "brackets.jar" source = "./" main = "DaneJensenBrackets.Bracket">
+				<external>
+					<fileset dir = "${lib}" includes="**/*.jar"/>
+				</external>
+			</build>
+	</target>
 	<!-- Run Spawner -->
 	<target name = "spawner">
 		<java classname = "bonzai.automator.Spawner" fork = "true">
